[metadata]
name = planet-box-extractor
version = 1.0
author = Kareem Eissa
author_email = k.eissa@vais.ai
description = Extract bounding boxes from satellite images using Planet Tiles API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/V-AI-S/planet-box-extractor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src